--- a/test/testcases/auto-test-parent.html
+++ b/test/testcases/auto-test-parent.html
@@ -46,6 +46,6 @@ document.timeline.play(new Animation(document.getElementById("a"),
 // Animation in group.
 document.timeline.play(new ParGroup([
   new Animation(document.getElementById("c"), effect, 1.0)
-], {iterationCount: 3}));
+], {iterations: 3}));
 
 </script>
