--- a/test/testcases/unit-test-duration.html
+++ b/test/testcases/unit-test-duration.html
@@ -22,7 +22,7 @@ limitations under the License.
 "use strict";
 
 var anim = new Animation(document.getElementById("anim"), {left: "100px"},
-    {iterationCount: 3.0});
+    {iterations: 3.0});
 var parGroup = new ParGroup();
 var seqGroup = new SeqGroup();
 
