--- a/test/testcases/auto-test-reparent.html
+++ b/test/testcases/auto-test-reparent.html
@@ -42,19 +42,19 @@ limitations under the License.
 
 // Run a simple animation. It should animate indefinitely.
 var anim = new Animation(document.getElementById("a"),
-    [{left: "100px"}, {left: "500px"}], {iterationCount: Infinity, duration: 2.0});
+    [{left: "100px"}, {left: "500px"}], {iterations: Infinity, duration: 2.0});
 document.timeline.play(anim);
 
 // After 3.0s, move it to a parallel group and run that.
 testharness_timeline.schedule(function() {
     document.timeline.play(new ParGroup([anim],
-        {duration: 1.0, iterationCount: 3.0}));
+        {duration: 1.0, iterations: 3.0}));
   }, 3000);
 
 // After 3.0s, move it to a parallel group and run that.
 testharness_timeline.schedule(function() {
     document.timeline.play(new ParGroup([anim],
-        {duration: 1.5, iterationCount: 3.0}));
+        {duration: 1.5, iterations: 3.0}));
   }, 8000);
 
 </script>
