--- a/test/testcases/test-events.html
+++ b/test/testcases/test-events.html
@@ -110,22 +110,22 @@ function simple(timing) {
 testTiming(simple(10),
   [event('start', 0, 0, 0), event('end', 10, 10, 0)],
   "simple animation");
-testTiming(simple({duration: 2, iterationCount: 5}),
+testTiming(simple({duration: 2, iterations: 5}),
   [event('start', 0, 0, 0)].concat(iterList(2, 2, 1, 2, 4))
                         .concat([event('end', 10, 10, 4)]),
   "simple iterations");
 testTiming(simple({duration: 4, iterationStart: 0.5,
-                   iterationCount: 2.5}),
+                   iterations: 2.5}),
   [event('start', 0, 0, 0)].concat(iterList(2, 2, 1, 4, 2))
                         .concat([event('end', 10, 10, 2)]),
   "offset iterations (coincident ends)");
 testTiming(simple({duration: 4, iterationStart: 0.3,
-                   iterationCount: 2.5}),
+                   iterations: 2.5}),
   [event('start', 0, 0, 0)].concat(iterList(2.8, 2.8, 1, 4, 2))
                         .concat([event('end', 10, 10, 2)]),
   "offset iterations (one complete iteration)");
 testTiming(simple({duration: 4, iterationStart: 0.75,
-                   iterationCount: 2.5}),
+                   iterations: 2.5}),
   [event('start', 0, 0, 0)].concat(iterList(1, 1, 1, 4, 3))
                         .concat([event('end', 10, 10, 3)]),
   "offset iterations (two complete iterations)");
@@ -150,7 +150,7 @@ testTiming(new SeqGroup([simple(5), simple(5)]),
    "seq group with multiple children");
 
 testTiming(new ParGroup([simple(5)], {duration: 5, 
-                                       iterationCount: 2}),
+                                       iterations: 2}),
   [event('start', 0, 0, 0), event('start', 0, 0, 0, child(0)),
    event('end', 5, 5, 0, child(0)), event('iteration', 5, 5, 1),
    event('start', 0, 5, 0, child(0)), event('end', 5, 10, 0, child(0)),
@@ -161,8 +161,8 @@ testTiming(new ParGroup([simple(5)], {duration: 5,
 // parent at ((-3), 2, 7)
 // result: child iterations at 1.5 | 2.5 4.5 6.5 | 7.5 9.5
 testTiming(new ParGroup([simple({duration: 2, iterationStart: 0.75,
-                                 iterationCount: 2.5})],
-                        {iterationStart: 0.6, iterationCount: 2}),
+                                 iterations: 2.5})],
+                        {iterationStart: 0.6, iterations: 2}),
   [event('start', 0, 0, 0), event('iteration', 4.5, 1.5, 3, child(0)), 
    event('end', 5, 2, 3, child(0)), event('iteration', 2, 2, 1),
    event('start', 0, 2, 0, child(0))].
@@ -183,9 +183,9 @@ testTiming(new ParGroup([simple({duration: 10, playbackRate: 4})],
    event('end', 2.5, 5, 0, child(0)), event('end', 5, 5, 0)],
    "nested non-unit playbackRates");
 
-testTiming(new ParGroup([simple({iterationCount: 2, duration: 2.5, 
+testTiming(new ParGroup([simple({iterations: 2, duration: 2.5, 
                                  playbackRate: 4})],
-           {playbackRate: 0.5, iterationCount: 2}),
+           {playbackRate: 0.5, iterations: 2}),
   [event('start', 0, 0, 0), event('start', 0, 0, 0, child(0)),
    event('iteration', 0.625, 1.25, 1, child(0)), 
    event('end', 1.25, 2.5, 1, child(0)), event('iteration', 2.5, 2.5, 1), 
