--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -119,14 +119,14 @@ var animFunc3 = new PathAnimationEffect(
     document.querySelector('#path3').pathSegList, 'auto-rotate');
 document.timeline.play(new Animation(
     document.querySelector("#anim3"), animFunc3,
-    {duration: 10, iterations: 2, timingFunction: "paced"}));
+    {duration: 10, iterations: 2, easing: "paced"}));
 
 var animFunc4KeyFrames = new KeyframeAnimationEffect(
     [{transform: "translate(387.5px, 287.5px) rotate(180deg)"}], "replace");
 var animFunc4Path = new PathAnimationEffect(
     document.querySelector('#path4').pathSegList, 'auto-rotate');
 var anim4 = new Animation(document.querySelector("#anim4"), animFunc4Path,
-    {duration: 10, iterations: 2, timingFunction: "paced"});
+    {duration: 10, iterations: 2, easing: "paced"});
 document.timeline.play(anim4);
 
 testharness_timeline.schedule(function() {
