--- a/test/testcases/auto-test-visibility.html
+++ b/test/testcases/auto-test-visibility.html
@@ -61,7 +61,7 @@ for (var start in states) {
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
-var timing = {duration: 0.5, timingFunction: 'steps(2, end)'};
+var timing = {duration: 0.5, easing: 'steps(2, end)'};
 
 // Add the animations
 var animations = [];
