--- a/test/testcases/manual-test-step.html
+++ b/test/testcases/manual-test-step.html
@@ -66,7 +66,7 @@ function testStep(numSteps, position) {
     },
   }, {
     duration: duration,
-    timingFunction: 'steps(' + numSteps + ', ' + position + ')',
+    easing: 'steps(' + numSteps + ', ' + position + ')',
   });
 }
 
