Creating expected_failures for IE.

--- a/test/testcases/auto-test-calc.html
+++ b/test/testcases/auto-test-calc.html
@@ -116,6 +116,7 @@ completely cover the light red box when the animation has finished.
 var expected_failures = {
   'Auto generated tests at t=0.5s': {
     firefox: true,
+    msie: true,
     message: "Floating point issues."
   }
 };
