--- a/test/testcases/auto-test-compositor.html
+++ b/test/testcases/auto-test-compositor.html
@@ -35,6 +35,7 @@ limitations under the License.
 <script>
 var expected_failures = {
  '/Auto generated tests at t=(1|2|3|4|5|6)s/': {
+   msie: true,
    firefox: true,
    message: "Getting weird numbers in ctm."
  }
