--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -99,6 +99,10 @@ var expected_failures = {
     firefox: true,
     message: "Doesn't actually follow paths."
   },
+  '/Check .*/': {
+    msie: true,
+    message: "Doesn't actually follow paths."
+  },
 };
 </script>
 <script src="../bootstrap.js"></script>
