--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -20,6 +20,10 @@ var expected_failures = {
   'Updated style should be visible despite unrelated errors at t=5s': {
     firefox: true,
     message: "Issue with window sizing cause value to be zero rather then 500px."
+  },
+  'Changing the start time of a new player to before the current time should cause it to take effect at t=3s': {
+    msie: true,
+    message: "rgb != rgba"
   }
 };
 </script>
