--- a/test/testcases/auto-test-composite-transforms.html
+++ b/test/testcases/auto-test-composite-transforms.html
@@ -61,6 +61,14 @@ limitations under the License.
 
 <div style="height: 700px;"></div>
 
+<script>
+var expected_failures = {
+  'Auto generated tests at t=2s': {
+    msie: true,
+    message: "Floating point issues."
+  }
+};
+</script>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
