--- a/test/testcases/auto-test-initial.html
+++ b/test/testcases/auto-test-initial.html
@@ -59,26 +59,43 @@ word word word word</pre>
 
 <script>
 var expected_failures = {
-   '#outline at t=0s' : {
-      chrome: ["28.0", "29.0"],
-      message: "Output changes from rgb to rgba in later Chrome"
-   },
-   '/(#background|#outline) at t=0s/' : {
-      firefox: true,
-      message: "rbga(0, 0, 0, 0) gets converted to 'transparent' in Firefox."
-   },
-   '#background at t=1s' : {
-      firefox: true,
-      message: "FIXME: Transparency is wrong."
-   },
-   '#border at t=2s' : {
-      firefox: true,
-      message: "FIXME: Border is wrong."
-   },
-   '/#text at t=(0|1)/': {
-      firefox: true,
-      message: "FIXME: font-size is returning different values."
-   },
+  '#outline at t=0s' : {
+    chrome: ["28.0", "29.0"],
+    msie: true,
+    message: "Output changes from rgb to rgba in later Chrome, rbga(0, 0, 0, 0) gets converted to 'transparent' in IE."
+  },
+  '/(#background|#outline) at t=0s/' : {
+    firefox: true,
+    message: "rbga(0, 0, 0, 0) gets converted to 'transparent' in Firefox."
+  },
+  '#background at t=1s' : {
+    firefox: true,
+    message: "FIXME: Transparency is wrong."
+  },
+  '#border at t=2s' : {
+    firefox: true,
+    message: "FIXME: Border is wrong."
+  },
+  '/#text at t=(0|1)s/': {
+    firefox: true,
+    message: "FIXME: font-size is returning different values."
+  },
+  '#transform at t=0s' : {
+    msie: true,
+    message: "'none' in IE."
+  },
+  '#transform at t=1s' : {
+    msie: true,
+    message: "Very small value floating point issue."
+  },
+  '/#(background|border) at t=(1|2)s/' : {
+    msie: true,
+    message: "IE returns rbga values."
+  },
+  '/#(text|outline) at t=(0|1|2)s/' : {
+    msie: true,
+    message: "IE returns rbga values."
+  }
 };
 </script>
 <script src="../bootstrap.js"></script>
