--- a/test/testcases/auto-test-matrix-transforms.html
+++ b/test/testcases/auto-test-matrix-transforms.html
@@ -59,6 +59,14 @@ limitations under the License.
 <div class="anim" id="e"></div>
 <div style="height: 550px"></div>
 
+<script>
+var expected_failures = {
+  '/Auto generated tests at t=((?!(0.4|2))[0-9.]+)s/': {
+    msie: true,
+    message: "Getting weird numbers."
+  }
+};
+</script>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
