--- a/test/testcases/test-keyframe-composite-operation.html
+++ b/test/testcases/test-keyframe-composite-operation.html
@@ -32,6 +32,22 @@ var expected_failures = {
   'Add-composite the neutral value onto a percent length type property with default value': {
     chrome: true,
     message: "getComputedStyle is broken under Chrome and this will return 'auto' while the specification says it should return pixels. https://code.google.com/p/chromium/issues/detail?id=229280"
+  },
+  '/(Add|Replace)-composite a color type property at t=1s/' : {
+    msie: true,
+    message: "IE returns rbga values."
+  },
+  '/(Add|Replace)-composite a shadow type property at t=1s/' : {
+    msie: true,
+    message: "IE returns different shadow format"
+  },
+  '/Add-composite the neutral value onto a (percent length|shadow|transform) type property with default value at t=0s/' : {
+    msie: true,
+    message: "IE returns auto|none|none"
+  },
+  'Add-composite the neutral value onto a shadow type property at t=0s' : {
+    msie: true,
+    message: "IE returns different shadow format"
   }
 };
 </script>
