--- a/test/testcases/test-player-cleanup.html
+++ b/test/testcases/test-player-cleanup.html
@@ -15,6 +15,14 @@ limitations under the License.
 -->
 <!DOCTYPE html><meta charset="UTF-8">
 <div id='anim'></div>
+<script>
+var expected_failures = {
+  '/.* t=(3|5)s/': {
+    msie: true,
+    message: "IE returns rgba not rga."
+  }
+};
+</script>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
