--- a/test/testcases/test-addeventlistener.html
+++ b/test/testcases/test-addeventlistener.html
@@ -32,8 +32,8 @@ limitations under the License.
 var effect = new KeyframeAnimationEffect([{ left: '100px' }]);
 
 var timingInput = {
-  iterationCount: 2,
-  iterationDuration: 0.25,
+  iterations: 2,
+  duration: 0.25,
 };
 
 function createAnimation() {
@@ -42,6 +42,7 @@ function createAnimation() {
   document.body.appendChild(target);
   return new Animation(target, effect, timingInput);
 }
+
 
 ['start', 'iteration', 'end'].forEach(function (eventType) {
   var animation;
