Reorganised to reflect third-party materials.

--- a/demos/globe/index.html
+++ b/demos/globe/index.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
       body {
-        background: #000 url(loading.gif) center center no-repeat;
+        background: #000 url(third-party/dat.globe/loading.gif) center center no-repeat;
         font-family: sans-serif;
         color: #fff;
       }
@@ -24,10 +24,10 @@
   <script type="text/javascript" src="third-party/Three/ThreeExtras.js"></script>
   <script type="text/javascript" src="third-party/Three/RequestAnimationFrame.js"></script>
   <script type="text/javascript" src="third-party/Three/Detector.js"></script>
-  <script type="text/javascript" src="globe.js"></script>
+  <script type="text/javascript" src="third-party/dat.globe/globe.js"></script>
 
-  <script type="text/javascript" src="third-party/animations.js"></script>
-  <script type="text/javascript" src="third-party/twine.js"></script>
+  <script type="text/javascript" src="web-animations.js"></script>
+  <script type="text/javascript" src="twine.js"></script>
   <script type="text/javascript">
 
     if (!Detector.webgl) {
