Adding style for skipped.

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -62,6 +62,14 @@ li.fail {
   color: red;
 }
 
+tbody.timeout {
+  color: yellow;
+}
+
+li.timeout {
+  color: yellow;
+}
+
 
 /* Pass styles */
 tbody.pass {
@@ -77,6 +85,14 @@ tbody.pass-expected-failure {
 }
 
 li.pass-expected-failure {
+  color: #00aa00;
+}
+
+tbody.skipped {
+  color: #00aa00;
+}
+
+li.skipped {
   color: #00aa00;
 }
 
@@ -664,6 +680,8 @@ function processResults(test, expected_failures) {
     if (counts.failed == 0) {
       if (counts.expected_failed > 0) {
         test.className = 'pass-expected-failure';
+      } else if (counts.skipped > 0) {
+        test.className = 'skipped';
       } else {
         test.className = 'pass';
       }
