Fixing extra comma.

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -578,7 +578,7 @@ function processResults(test, expected_failures) {
     failed: 0,
     skipped: 0,
     expected_failed: 0, // This count is included in the above
-    total: test.results_raw.length,
+    total: test.results_raw.length
   };
   var results = [];
   var newResultsDiv = document.createElement('ul');
