--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -544,7 +544,7 @@ function runTests() {
   // Deal with tests which are taking too long...
   for (var i in testStates['RUNNING']) {
     var test = testStates['RUNNING'][i];
-    if (now() - test.start > 5000) {
+    if (now() - test.start > 30e3) {
       // Only way to stop all the javascript and anything else running in the
       // test is to clear the document.
       var test_iframe = test.querySelector('iframe');
