Updated to use ball rather than chrome logo.

--- a/demos/rolio/rolio.html
+++ b/demos/rolio/rolio.html
@@ -20,8 +20,8 @@ canvas {
   <g id="screenPanel">
     <g id='contentsPanel' transform="scale(-1, -1)">
       <path id="animPath" 
-            stroke="gray" stroke-width="2px" fill="#A99" transform='translate(0, 23)'/>
-      <image id="cursor" x="-25" y="-25" width="50" height="50" xlink:href='chrome-a_128.png'/>
+            stroke="gray" stroke-width="2px" fill="#A99" transform='translate(0, 21)'/>
+      <image id="cursor" x="-25" y="-25" width="50" height="50" xlink:href='ball.png'/>
     </g>
   </g>
 </g>
