Teach Web Animations about step-start, step-middle, step-end shorthands.

--- a/test/testcases/auto-test-timing-functions.html
+++ b/test/testcases/auto-test-timing-functions.html
@@ -29,7 +29,7 @@ limitations under the License.
   position: absolute;
   left: 200px;
   width: 200px;
-  height: 200px;
+  height: 275px;
   background: red;
 }
 body { margin: 0px; }
@@ -46,6 +46,9 @@ body { margin: 0px; }
   <div class="anim test" id="f">steps(3, middle)</div>
   <div class="anim test" id="g">steps(3, end)</div>
   <div class="anim test" id="h">cubic-bezier(0.5, -1.5, 0.5, 2.5)</div>
+  <div class="anim test" id="i">step-start</div>
+  <div class="anim test" id="j">step-middle</div>
+  <div class="anim test" id="k">step-end</div>
 </div>
 
 <div style="height:50px"></div>
