Implement chained timing functions
These are specified through the following attributes on Timing ...
- easing: A space-separated list of timing functions
- easingPoints: An array of the end points of the input/output ranges over
  which the timing functions apply. The following keywords are also
  allowed ...
  - distribute: Distribute timing functions evenly in time.
  - align: If the TimedItem with which this Timing object is associated is an
    Animation with a keyframe or path effect, align timing functions with
    keyframes.

See http://dev.w3.org/fxtf/web-animations/#timing-function-chains for details.

Note that alignment with a path effect is not yet implemented.

--- a/test/test-generator.html
+++ b/test/test-generator.html
@@ -74,7 +74,7 @@ var frameTime = 100;
 var checks = [];
 var interval;
 
-document.getElementById("iframeSrc").value = window.location.search.substring(1) || "testcases/test-calc.html";
+document.getElementById("iframeSrc").value = window.location.search.substring(1) || "testcases/auto-test-calc.html";
 document.getElementById("interval").value = "1";
 document.getElementById("obProp").value = ".anim, width";
 
