Avoid overwriting animated properties with inline values when set

--- a/test/testcases/auto-test-inline-style.html
+++ b/test/testcases/auto-test-inline-style.html
@@ -60,8 +60,7 @@ at(1.5, function() {
 });
 
 testharness_timeline.schedule(function() {
-  target.style.left = '100px';
-  target.style.backgroundColor = 'green';
+  target.style.cssText = 'left: 100px; background-color: green;';
 }, 2500);
 
 at(3, function() {
