--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -171,7 +171,11 @@ function trueOffsetTop(element) {
  * @return {number} Time as this very moment.
  */
 function now() {
-  return performance.now();
+  try {
+    return window.performance.now();
+  } catch (e) {
+    return Date.now();
+  }
 }
 
 /**
@@ -569,7 +573,7 @@ function runTests() {
   // Deal with tests which are taking too long...
   for (var i in testStates['RUNNING']) {
     var test = testStates['RUNNING'][i];
-    if (now() - test.start > 30e3) {
+    if (now() - test.start > 300e3) {
       // Only way to stop all the javascript and anything else running in the
       // test is to clear the document.
       var test_iframe = test.querySelector('iframe');
