--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -83,21 +83,21 @@ height: 600px;
 
 <script>
 var expected_failures = {
-  '/Check .* t=[0123]s/': {
+  '/#anim1/': {
     firefox: true,
-    message: "Doesn't actually follow paths."
+    message: "Doesn't quite follow path correctly."
   },
-  '/Check #anim[123] .* t=[456]s/': {
+  '/#anim2 at t=(0|1|2|7|8|10|11)s/': {
     firefox: true,
-    message: "Doesn't actually follow paths."
+    message: "Doesn't quite follow path correctly."
   },
-  '/Check .* t=[789]s/': {
+  '/#anim3 at t=(0|6|7|8|10)s/': {
     firefox: true,
-    message: "Doesn't actually follow paths."
+    message: "Doesn't quite follow path correctly."
   },
-  '/Check .* t=1[01]s/': {
+  '/#anim4 at t=(0|10)s/': {
     firefox: true,
-    message: "Doesn't actually follow paths."
+    message: "Doesn't quite follow path correctly."
   },
   '/Check .*/': {
     msie: true,
